# openblas_buildsys_snips

./: .buildinfo  .gitignore  .prettierrc.toml  addl_design_issues.html  addl_resources.html  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  readme.md  readme.org  readme_src.org  search.html  searchindex.js
.doctrees/: addl_design_issues.doctree  addl_resources.doctree  environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/openblas_buildsys_snips/: openblas_buildsys_snips._data.doctree  openblas_buildsys_snips._utils.doctree  openblas_buildsys_snips.cli.doctree  openblas_buildsys_snips.cmake.doctree  openblas_buildsys_snips.cmake.netlib.doctree  openblas_buildsys_snips.doctree  openblas_buildsys_snips.make.blas_kernel.doctree  openblas_buildsys_snips.make.doctree  openblas_buildsys_snips.make.interface.doctree  openblas_buildsys_snips.make.log_parser.doctree
.doctrees/debugging/: baseline_setup.doctree  index.doctree  path_tracing.doctree  perf_listing.doctree  printf_debugging.doctree  pyspy_tracer.doctree
.doctrees/feasibility/: index.doctree  l1_drot.doctree
.doctrees/nb/: interface.doctree  kernel_blas.doctree
.doctrees/notes/: approval_tests.doctree  blas_numpy.doctree  index.doctree  interface.doctree  testing.doctree
.doctrees/roadmap/: firststeps.doctree
.github/workflows/: build_docs.yml
_sources/: addl_design_issues.md.txt  addl_resources.md.txt  index.md.txt
_sources/apidocs/: index.rst.txt
_sources/apidocs/openblas_buildsys_snips/: openblas_buildsys_snips._data.md.txt  openblas_buildsys_snips._utils.md.txt  openblas_buildsys_snips.cli.md.txt  openblas_buildsys_snips.cmake.md.txt  openblas_buildsys_snips.cmake.netlib.md.txt  openblas_buildsys_snips.make.blas_kernel.md.txt  openblas_buildsys_snips.make.interface.md.txt  openblas_buildsys_snips.make.log_parser.md.txt  openblas_buildsys_snips.make.md.txt  openblas_buildsys_snips.md.txt
_sources/debugging/: baseline_setup.md.txt  index.md.txt  path_tracing.md.txt  perf_listing.md.txt  printf_debugging.md.txt  pyspy_tracer.md.txt
_sources/feasibility/: index.md.txt
_sources/nb/: interface.md.txt  kernel_blas.md.txt
_sources/notes/: approval_tests.md.txt  blas_numpy.md.txt  index.md.txt  interface.md.txt  testing.md.txt
_sources/roadmap/: firststeps.md.txt
apidocs/: index.html
apidocs/openblas_buildsys_snips/: openblas_buildsys_snips._data.html  openblas_buildsys_snips._utils.html  openblas_buildsys_snips.cli.html  openblas_buildsys_snips.cmake.html  openblas_buildsys_snips.cmake.netlib.html  openblas_buildsys_snips.html  openblas_buildsys_snips.make.blas_kernel.html  openblas_buildsys_snips.make.html  openblas_buildsys_snips.make.interface.html  openblas_buildsys_snips.make.log_parser.html
debugging/: baseline_setup.html  index.html  path_tracing.html  perf_listing.html  printf_debugging.html  pyspy_tracer.html
docs/source/: addl_design_issues.md  conf.py  index.md
docs/source/debugging/: baseline_setup.org  index.md  index.org  path_tracing.org  perf_listing.org  printf_debugging.org  pyspy_tracer.org
docs/source/feasibility/: l1_drot.md
docs/source/feasibility/code_src/: drot_example.c
docs/source/nb/: interface.md  kernel_blas.md
docs/source/notes/: approval_tests.md  index.md  interface.md  testing.md
docs/source/notes/code_src/: expected_outputs.json  optest.py
docs/source/roadmap/: firststeps.md
feasibility/: index.html  l1_drot.html
nb/: interface.html  kernel_blas.html
notes/: approval_tests.html  blas_numpy.html  index.html  interface.html  testing.html
roadmap/: firststeps.html
scripts/: clean_and_convert.el
src/openblas_buildsys_snips/: __init__.py  _data.py  _utils.py  cli.py
src/openblas_buildsys_snips/cmake/: __init__.py  netlib.py
src/openblas_buildsys_snips/make/: __init__.py  blas_kernel.py  log_parser.py
subrepos/openblas/: .gitrepo  getarch.c  meson.build
subrepos/openblas/.github/workflows/: meson.yml
subrepos/openblas/lapack/: meson.build
tests/: conftest.py  test_blas_kernel.py  test_blas_symb.py  test_l1_symbs.py  test_l2_symbs.py  test_l3_symbs.py  test_log_parser.py  test_makefile.py  test_netlib.py  test_utils.py
tests/approved_files/: test_l1_symbs.test_camax_k.approved.txt  test_l1_symbs.test_camin_k.approved.txt  test_l1_symbs.test_casum_k.approved.txt  test_l1_symbs.test_caxpby_k.approved.txt  test_l1_symbs.test_caxpy_k.approved.txt  test_l1_symbs.test_ccopy_k.approved.txt  test_l1_symbs.test_cdotc_k.approved.txt  test_l1_symbs.test_cdotu_k.approved.txt  test_l1_symbs.test_cnrm2_k.approved.txt  test_l1_symbs.test_cscal_k.approved.txt  test_l1_symbs.test_csrot_k.approved.txt  test_l1_symbs.test_csrotg_k.approved.txt  test_l1_symbs.test_csum_k.approved.txt  test_l1_symbs.test_cswap_k.approved.txt  test_l1_symbs.test_damax_k.approved.txt  test_l1_symbs.test_damin_k.approved.txt  test_l1_symbs.test_dasum_k.approved.txt  test_l1_symbs.test_daxpby_k.approved.txt  test_l1_symbs.test_daxpy_k.approved.txt  test_l1_symbs.test_dbf16tod_k.approved.txt  test_l1_symbs.test_dcopy_k.approved.txt  test_l1_symbs.test_ddot_k.approved.txt  test_l1_symbs.test_dnrm2_k.approved.txt  test_l1_symbs.test_drot_k.approved.txt  test_l1_symbs.test_drotg_k.approved.txt  test_l1_symbs.test_drotm_k.approved.txt  test_l1_symbs.test_drotmg_k.approved.txt  test_l1_symbs.test_dscal_k.approved.txt  test_l1_symbs.test_dsdot_k.approved.txt  test_l1_symbs.test_dsum_k.approved.txt  test_l1_symbs.test_dswap_k.approved.txt  test_l1_symbs.test_samax_k.approved.txt  test_l1_symbs.test_samin_k.approved.txt  test_l1_symbs.test_sasum_k.approved.txt  test_l1_symbs.test_saxpby_k.approved.txt  test_l1_symbs.test_saxpy_k.approved.txt  test_l1_symbs.test_sbdot_k.approved.txt  test_l1_symbs.test_sbdtobf16_k.approved.txt  test_l1_symbs.test_sbf16tos_k.approved.txt  test_l1_symbs.test_sbstobf16_k.approved.txt  (+541 more)
tests/test_blas_kernel/: Makefile.L2
tests/test_blas_symb/: Makefile.L1  Makefile.L3  interface_Makefile
