[project]
name = "openblas_buildsys_snips"
version = "0.1.0"
description = "Snippets for working on the meson build for OpenBLAS"
authors = [
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]
dependencies = []
requires-python = ">=3.12"
readme = "readme.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
testing = [
    "pytest-cov>=5.0.0",
    "pytest>=8.1.1",
]
