[project]
name = "openblas_buildsys_snips"
version = "0.1.0"
description = "Snippets for working on the meson build for OpenBLAS"
authors = [
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]
dependencies = [
    "pytest-benchmark>=4.0.0",
    "memray>=1.12.0",
]
requires-python = ">=3.10"
readme = "readme.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.4",
]
testing = [
    "pytest-cov>=5.0.0",
    "pytest>=8.1.1",
    "pytest-datadir>=1.5.0",
    "approvaltests>=12.2.1",
    "pytest-approvaltests>=0.2.4",
]
docs = [
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "sphinx-contributors>=0.2.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-autobuild>=2024.2.4",
    "sphinxcontrib-spelling>=8.0.0",
    "myst-parser>=2",
    "sphinx-autodoc2>=0.4.2",
]

[tool.pdm.scripts]
check_ruff  = "ruff check ."
ruff_fix    = "ruff --fix --unsafe-fixes ."
ruff_format = "ruff format ."
lint        = { composite = [ "ruff_fix", "ruff_format" ] }
test        = "pytest --cov=src tests"
mkdoc = {composite = ["sphinx-build -b html docs/source docs/build/html"]}
